- Added visibility to edit settings - Minor fixes

--- a/frontend/src/styles/views.scss
+++ b/frontend/src/styles/views.scss
@@ -13,7 +13,7 @@
     cursor: pointer;
 
     &.gc-view-highlight {
-      border: 2px solid grey;
+      border-color: grey;
     }
   }
 }
